@@ -35,6 +35,21 @@ AM_SANITY_CHECK
 
 AC_LANG([C++])
 
+AC_LANG_PUSH([C++])
+saved_libs="$LIBS"
+AC_MSG_CHECKING([[checking for Boost.Program_options...]])
+AC_LINK_IFELSE([AC_LANG_PROGRAM([#include <boost/program_options.hpp>],
+	[boost::program_options::variables_map dummy()])],
+	[AC_MSG_RESULT([yes])
+	BOOST_LIBS="-lboost_program_options"],
+	[AC_MSG_RESULT([no])
+	AC_MSG_FAILURE([libboost_program_options (Boost C++ Libraries) is not installed, but is required by $PACKAGE])])
+LIBS="$saved_libs"
+AC_SUBST(BOOST_LIBS)
+AC_LANG_POP([C++])
+
+LIBS="$LIBS $BOOST_LIBS"
+
 # Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_STDBOOL
