@@ -18,7 +18,9 @@
  *
  * $Id$
  */
+#include "Main.h"
 #include "zipdirfs/entry_definitions.h"
+#include "CommandLine.h"
 #if HAVE_CONFIG_H
 #include "config.h"
 #endif
@@ -30,56 +32,80 @@
 
 typedef fusekit::daemon<zipdirfs::system_directory> daemon_type;
 
+namespace po = boost::program_options;
+Main application;
+
 const char *getProgramName(const char* self);
 bool parseParameters(std::vector<const char*> &args, std::string &path);
 void showUsage(const char *self);
 void showVersion(const char *self);
 bool isHelp(const char* s1) { return !strcmp(s1, "-h") || !strcmp(s1, "--help"); }
 bool isVersion(const char* s1) { return !strcmp(s1, "-V") || !strcmp(s1, "--version"); }
+char** toArgv(std::vector<std::string>& arguments);
+void freeArgv(char** argv);
 
-int main(int argc, const char *argv[])
+int main(const int argc, const char** argv)
+{
+	try
+	{
+		app.Init(argc, argv);
+		app.Run();
+	}
+	catch (Main::Result res)
+	{
+		return res.result;
+	}
+	return 0;
+}
+
+void Main::Run() throw(Main::Result)
+{
+	this->fuseOptions.push_back("-oro,nosuid,noexec,noatime");
+	this->fuseOptions.push_back("-o");
+	this->fuseOptions.push_back(std::string("subtype=") + getProgramName(this->fuseOptions.front().c_str()));
+	this->fuseOptions.push_back("-o");
+	this->fuseOptions.push_back(std::string("fsname=") + this->sourcePath);
+	daemon_type &daemon = daemon_type::instance();
+	daemon.root().setRealPath(sourcePath.c_str());
+	char** argv = toArgv(this->fuseOptions);
+	daemon.run(this->fuseOptions.size(), argv);
+	freeArgv(argv);
+}
+
+void Main::Init(const int argc, const char* argv[]) throw(Main::Result)
 {
 	const char* const programName = getProgramName(argv[0]);
-	// for (int i = 0; i < argc; i++) std::cerr << "args: " << argv[i] << std::endl;
-	std::string sourcePath;
-	std::vector<const char*> arguments(argv, argv + argc);
+	std::vector<const char*> arguments(argv + 1, argv + argc);
 	if (std::find_if(arguments.begin(), arguments.end(), isHelp) != arguments.end())
 	{
 		showUsage(argv[0]);
-		return 0;
+		throw Result(0);
 	}
 	if (std::find_if(arguments.begin(), arguments.end(), isVersion) != arguments.end())
 	{
 		showVersion(argv[0]);
-		return 0;
+		throw Result(0);
 	}
-	if (!parseParameters(arguments, sourcePath))
+	if (!parseParameters(arguments, this->sourcePath))
 	{
-		const char *message = (sourcePath.empty()) ? ": missing originalpath argument" : ": missing mountpoint argument";
+		const char *message = (this->sourcePath.empty()) ? ": missing originalpath argument" : ": missing mountpoint argument";
 		std::cerr << programName << message << std::endl;
-		return -1;
+		throw Result(-1);
+	}
+	for (std::vector<const char*>::iterator it = arguments.begin(); it != arguments.end(); it++)
+	{
+		this->fuseOptions.push_back(*it);
 	}
 	if (sourcePath[sourcePath.size() - 1] == '/') sourcePath.erase(sourcePath.size() - 1);
-	char *fstype = new char[strlen(programName) + 9];
-	fstype[0] = 0;
-	strcat(fstype, "subtype=");
-	strcat(fstype, programName);
-	char *fsname = new char[sourcePath.size() + 8];
-	fsname[0] = 0;
-	strcat(fsname, "fsname=");
-	strcat(fsname, sourcePath.c_str());
-	arguments.push_back("-oro,nosuid,noexec,noatime");
-	arguments.push_back("-o");
-	arguments.push_back(fstype);
-	arguments.push_back("-o");
-	arguments.push_back(fsname);
-	daemon_type &daemon = daemon_type::instance();
-	daemon.root().setRealPath(sourcePath.c_str());
-	// for (std::vector<const char*>::iterator it = arguments.begin(); it != arguments.end(); it++) std::cerr << "fuse args:" << *it << std::endl;
-	daemon.run(arguments.size(), const_cast<char **>(&arguments[0]));
-	delete[] fsname;
-	delete[] fstype;
-	return 0;
+	this->fuseOptions.insert(this->fuseOptions.begin(), argv[0]);
+}
+
+Main::Main()
+{
+}
+
+Main::~Main()
+{
 }
 
 const char *getProgramName(const char* self)
@@ -94,7 +120,7 @@ void showUsage(const char* self)
 	const char * argv[2] = { self, "-h" };
 	daemon_type::instance().run(2, const_cast<char **>(argv));
 	std::cerr << std::endl
-		<< "zipdirfs options:" << std::endl
+		<< " options:" << std::endl
 		<< "    originalpath           the path to mount from and filter for zip files" << std::endl;
 }
 
@@ -115,8 +141,7 @@ bool parseParameters(std::vector<const char*> &args, std::string &path)
 	bool hasMountPoint = false;
 	bool hasMountSource = false;
 	std::vector<const char*>::iterator itPath;
-	std::vector<const char*>::iterator it = args.begin();
-	for (it++; it != args.end(); it++) // Skip first parameter: program path and name
+	for (std::vector<const char*>::iterator it = args.begin(); it != args.end(); it++)
 	{
 		if (*it[0] == '-')
 		{
@@ -138,4 +163,35 @@ bool parseParameters(std::vector<const char*> &args, std::string &path)
 		args.erase(itPath);
 	}
 	return hasMountSource;
+}
+
+char* toArgv_convert(std::string value)
+{
+	char* newValue = new char[value.size() + 1];
+	newValue[value.size()] = 0;
+	strncpy(newValue, value.c_str(), value.size());
+	return newValue;
+}
+
+char** toArgv(std::vector<std::string>& arguments)
+{
+	char** argv = new char*[arguments.size() + 1];
+	char** argvIt = argv;
+	for (std::vector<std::string>::iterator argIt = arguments.begin(); argIt != arguments.end(); argIt++, argvIt++)
+	{
+		*argvIt = toArgv_convert(*argIt);
+	}
+	*argvIt = NULL;
+	return argv;
+}
+
+void freeArgv(char** argv)
+{
+	char** argvIt = argv;
+	while (*argvIt != NULL)
+	{
+		delete[] *argvIt;
+		argvIt++;
+	}
+	delete[] argv;
 }
